--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
           </div>
           <ul class="nav-links">
             <li class="nav-link">
-              <a class="link" href="#my-work" aria-label="My work">My work</a>
+              <a class="link" href="#about-me" aria-label="About me"
+                >About me</a
+              >
             </li>
             <li class="nav-link">
-              <a class="link" href="#" aria-label="About me">About me</a>
+              <a class="link" href="#my-work" aria-label="My work">My work</a>
             </li>
             <li class="nav-link">
               <a class="link" href="#" aria-label="Contact me">Contact me</a>
@@ -43,7 +45,7 @@
           </ul>
         </nav>
       </header>
-      <main aria-label="introduction about the author">
+      <main aria-label="introduction about the author" id="about-me">
         <div class="personal-info">
           <div>
             <h1 class="title greeting">Hello world !, I'm Mohammad Alwazzan</h1>
@@ -296,6 +298,49 @@
               </p>
             </div>
           </div>
+        </div>
+      </main>
+    </section>
+    <section class="section third-section">
+      <main aria-label="Contact me section" id="contact-me">
+        <div class="contact-info">
+          <h1>Contact me</h1>
+          <p>
+            Please get in touch if you think our <br />
+            work could be mutually beneficial!
+          </p>
+          <p>
+            Rainbow st. <br />
+            Amman, Jordan
+          </p>
+          <div class="contact-icons">
+            <div>
+              <img src="./images/telephone.png" alt="" />
+              <p class="icon-paragraph">+962790905836</p>
+            </div>
+            <div>
+              <img src="./images/telephone.png" alt="" />
+              <p class="icon-paragraph">kingwazzan2@gmail.com</p>
+            </div>
+          </div>
+          <p class="personal-links">
+            <a href="" class="personal-link"
+              ><i class="devicon-github-original"></i
+            ></a>
+            <a class="personal-link" href=""
+              ><i class="devicon-linkedin-plain"></i
+            ></a>
+            <a href="" class="personal-link">
+              <i class="devicon-twitter-original"></i>
+            </a>
+          </p>
+        </div>
+        <div class="contact-photo">
+          <h1>Contact me</h1>
+          <!-- <img src="./images/personal-photo 290w.jpg" srcset="
+          ./images/personal-photo-290w.jpg 290w,
+          ./images/personal-photo-480w.jpg 480w " sizes="(max-width: 480px)
+          290px, 480px" alt="personal photo" aria-label="navbar toggler" /> -->
         </div>
       </main>
     </section>
