--- a/index.html
+++ b/index.html
@@ -315,32 +315,63 @@
           </p>
           <div class="contact-icons">
             <div>
-              <img src="./images/telephone.png" alt="" />
-              <p class="icon-paragraph">+962790905836</p>
+              <a href="tel:+962790905836" class="phone-link">
+                <img
+                  src="./images/telephone.png"
+                  alt=""
+                  width="32px"
+                  class="icon"
+                />
+                <p class="icon-paragraph">+962790905836</p>
+              </a>
             </div>
             <div>
-              <img src="./images/telephone.png" alt="" />
-              <p class="icon-paragraph">kingwazzan2@gmail.com</p>
+              <a href="mailto:kingwazzan2@example.com" class="email-link"
+                ><img
+                  src="./images/email.png"
+                  alt=""
+                  width="32px"
+                  class="icon"
+                />
+                <p class="icon-paragraph">kingwazzan2@gmail.com</p></a
+              >
             </div>
           </div>
           <p class="personal-links">
-            <a href="" class="personal-link"
+            <a
+              class="personal-link"
+              href="https://github.com/kingmohbil"
+              target="_blank"
               ><i class="devicon-github-original"></i
             ></a>
-            <a class="personal-link" href=""
+            <a
+              class="personal-link"
+              href="https://www.linkedin.com/in/mohammad-alwazzan-587b12239/"
+              target="_blank"
               ><i class="devicon-linkedin-plain"></i
             ></a>
-            <a href="" class="personal-link">
+            <a
+              class="personal-link"
+              href="https://twitter.com/kingmohbil"
+              target="_blank"
+            >
               <i class="devicon-twitter-original"></i>
             </a>
           </p>
         </div>
         <div class="contact-photo">
           <h1>Contact me</h1>
-          <!-- <img src="./images/personal-photo 290w.jpg" srcset="
-          ./images/personal-photo-290w.jpg 290w,
-          ./images/personal-photo-480w.jpg 480w " sizes="(max-width: 480px)
-          290px, 480px" alt="personal photo" aria-label="navbar toggler" /> -->
+          <img
+            src="./images/personal-photo 290w.jpg"
+            srcset="
+              ./images/personal-photo-290w.jpg 290w,
+              ./images/personal-photo-480w.jpg 480w
+            "
+            sizes="(max-width: 480px)
+          290px, 480px"
+            alt="personal photo"
+            aria-label="navbar toggler"
+          />
         </div>
       </main>
     </section>
