Added the links to the projects

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
               <a class="link" href="#my-work" aria-label="My work">My work</a>
             </li>
             <li class="nav-link">
-              <a class="link" href="#" aria-label="Contact me">Contact me</a>
+              <a class="link" href="#contact-me" aria-label="Contact me"
+                >Contact me</a
+              >
             </li>
           </ul>
         </nav>
       </header>
       <main aria-label="introduction about the author" id="about-me">
         <div class="personal-info">
-          <div>
+          <div class="personal-description">
             <h1 class="title greeting">Hello world !, I'm Mohammad Alwazzan</h1>
             <h1 class="title introduction">I'm a Full Stack Web Developer</h1>
           </div>
@@ -75,22 +77,28 @@
           <div class="card">
             <div class="card-img">
               <img
-                src="./images/first-project.png"
-                width="360px"
+                src="./images/Priavte club.png  "
+                width="300px"
                 alt="screenshot of project"
               />
             </div>
             <div class="card-header">
-              <h2 class="card-title">Thats a text</h2>
+              <h2 class="card-title">Private Club</h2>
               <div class="card-links">
                 <ul class="card-links">
                   <li class="card-link">
-                    <a class="link" href="https://github.com/" target="_blank"
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/private-club"
+                      target="_blank"
                       ><i class="devicon-github-original colored"></i
                     ></a>
                   </li>
                   <li class="card-link">
-                    <a href="https://" target="_blank">
+                    <a
+                      href="https://private-club-production.up.railway.app/"
+                      target="_blank"
+                    >
                       <img
                         src="./images/open-in-new.png"
                         alt=""
@@ -104,29 +112,36 @@
             </div>
             <div class="card-description">
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                The private club project is a project that you can send messages
+                anonymously.
               </p>
             </div>
           </div>
           <div class="card">
             <div class="card-img">
               <img
-                src="./images/first-project.png"
-                width="360px"
+                src="./images/memory card.png"
+                width="300px"
                 alt="screenshot of project"
               />
             </div>
             <div class="card-header">
-              <h2 class="card-title">Thats a text</h2>
+              <h2 class="card-title">Memory card game</h2>
               <div class="card-links">
                 <ul class="card-links">
                   <li class="card-link">
-                    <a class="link" href="https://github.com/" target="_blank"
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/memory-card"
+                      target="_blank"
                       ><i class="devicon-github-original colored"></i
                     ></a>
                   </li>
                   <li class="card-link">
-                    <a href="https://" target="_blank">
+                    <a
+                      href="https://kingmohbil.github.io/memory-card/"
+                      target="_blank"
+                    >
                       <img
                         src="./images/open-in-new.png"
                         alt=""
@@ -139,14 +154,16 @@
               </div>
             </div>
             <div class="card-description">
-              <p class="card-text">Lorem ipsum dolor sit amet,</p>
+              <p class="card-text">
+                A memory card game using react js library.
+              </p>
             </div>
           </div>
           <div class="card">
             <div class="card-img">
               <img
                 src="./images/inventory-project.png"
-                width="360px"
+                width="300px"
                 alt="screenshot of project"
               />
             </div>
@@ -188,22 +205,28 @@
           <div class="card">
             <div class="card-img">
               <img
-                src="./images/first-project.png"
-                width="360px"
+                src="./images/weather app.png"
+                width="300px"
                 alt="screenshot of project"
               />
             </div>
             <div class="card-header">
-              <h2 class="card-title">Thats a text</h2>
+              <h2 class="card-title">Weather Application</h2>
               <div class="card-links">
                 <ul class="card-links">
                   <li class="card-link">
-                    <a class="link" href="https://github.com/" target="_blank"
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/weather-app"
+                      target="_blank"
                       ><i class="devicon-github-original colored"></i
                     ></a>
                   </li>
                   <li class="card-link">
-                    <a href="https://" target="_blank">
+                    <a
+                      href="https://kingmohbil.github.io/weather-app/"
+                      target="_blank"
+                    >
                       <img
                         src="./images/open-in-new.png"
                         alt=""
@@ -217,29 +240,36 @@
             </div>
             <div class="card-description">
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                A weather application that provides weather information in a
+                variety of locations.
               </p>
             </div>
           </div>
           <div class="card">
             <div class="card-img">
               <img
-                src="./images/first-project.png"
-                width="360px"
+                src="./images/Library.png"
+                width="300px"
                 alt="screenshot of project"
               />
             </div>
             <div class="card-header">
-              <h2 class="card-title">Thats a text</h2>
+              <h2 class="card-title">Library</h2>
               <div class="card-links">
                 <ul class="card-links">
                   <li class="card-link">
-                    <a class="link" href="https://github.com/" target="_blank"
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/Library"
+                      target="_blank"
                       ><i class="devicon-github-original colored"></i
                     ></a>
                   </li>
                   <li class="card-link">
-                    <a href="https://" target="_blank">
+                    <a
+                      href="https://kingmohbil.github.io/Library/"
+                      target="_blank"
+                    >
                       <img
                         src="./images/open-in-new.png"
                         alt=""
@@ -253,7 +283,7 @@
             </div>
             <div class="card-description">
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                A local library that you can add books to it.
               </p>
             </div>
           </div>
@@ -261,7 +291,7 @@
             <div class="card-img">
               <img
                 src="./images/cv-project.png"
-                width="360px"
+                width="300px"
                 alt="screenshot of project"
               />
             </div>
@@ -308,7 +338,9 @@
           <h1>Contact me</h1>
           <p>
             Please get in touch if you think our <br />
-            work could be mutually beneficial!
+            work could be mutually beneficial, <br />
+            and there is much more projects check<br />
+            my github account.
           </p>
           <p>
             Rainbow st. <br />
