Added on scroll transition

--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
       <main aria-label="introduction about the author" id="about-me">
         <div class="personal-info">
           <div class="personal-description">
-            <h1 class="title greeting">Hello world !, I'm Mohammad Alwazzan</h1>
-            <h1 class="title introduction">I'm a Full Stack Web Developer</h1>
+            <h1 class="title greeting hidden">
+              Hello world !, I'm Mohammad Alwazzan
+            </h1>
+            <h1 class="title introduction hidden">
+              I'm a Full Stack Web Developer
+            </h1>
           </div>
           <div class="personal-photo">
             <img
@@ -334,7 +338,7 @@
     </section>
     <section class="section third-section">
       <main aria-label="Contact me section" id="contact-me">
-        <div class="contact-info">
+        <div class="contact-info hidden">
           <h1>Contact me</h1>
           <p>
             Please get in touch if you think our <br />
