Added pulse animation, animation added for contact-me

--- a/index.html
+++ b/index.html
@@ -340,13 +340,13 @@
       <main aria-label="Contact me section" id="contact-me">
         <div class="contact-info hidden">
           <h1>Contact me</h1>
-          <p>
+          <p class="second-animation">
             Please get in touch if you think our <br />
             work could be mutually beneficial, <br />
             and there is much more projects check<br />
             my github account.
           </p>
-          <p>
+          <p class="second-animation">
             Rainbow st. <br />
             Amman, Jordan
           </p>
