--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <section class="section first-section">
+    <section class="section first-section" id="about-me">
       <header class="main-header">
         <nav class="main-nav" aria-label="main navigation bar">
           <div class="navbar-header">
@@ -48,7 +48,7 @@
           </ul>
         </nav>
       </header>
-      <main aria-label="introduction about the author" id="about-me">
+      <main aria-label="introduction about the author">
         <div class="personal-info">
           <div class="personal-description">
             <h1 class="title greeting hidden">
