Added transition for the cards

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <main aria-label="my work section" id="my-work">
         <h1 class="cards-container-title">My Work</h1>
         <div class="cards-container">
-          <div class="card">
+          <div class="card hidden">
             <div class="card-img">
               <img
                 src="./images/Priavte club.png  "
@@ -121,7 +121,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card hidden">
             <div class="card-img">
               <img
                 src="./images/memory card.png"
@@ -163,7 +163,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card hidden">
             <div class="card-img">
               <img
                 src="./images/inventory-project.png"
@@ -206,7 +206,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card hidden">
             <div class="card-img">
               <img
                 src="./images/weather app.png"
@@ -249,7 +249,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card hidden">
             <div class="card-img">
               <img
                 src="./images/Library.png"
@@ -291,7 +291,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card hidden">
             <div class="card-img">
               <img
                 src="./images/cv-project.png"
