commented the personal images untill get new ones

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
+    <link rel="shortcut icon" href="./images/user.png" type="image/x-icon" />
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <section class="section first-section" id="about-me">
+    <section
+      class="section first-section"
+      id="about-me"
+      aria-label="main section"
+    >
       <header class="main-header">
         <nav class="main-nav" aria-label="main navigation bar">
           <div class="navbar-header">
@@ -59,17 +64,17 @@
             </h1>
           </div>
           <div class="personal-photo">
-            <img
+            <!-- <img
               src="./images/personal-photo 290w.jpg"
               srcset="
-                ./images/personal-photo-290w.jpg 290w,
-                ./images/personal-photo-480w.jpg 480w
+                ./images/personal-3-165w.png 290w,
+                ./images/personal-3-165w.png 480w
               "
               sizes="(max-width: 480px) 290px,
                       480px"
               alt="personal photo"
               aria-label="navbar toggler"
-            />
+            /> -->
           </div>
         </div>
       </main>
@@ -185,7 +190,7 @@
                   </li>
                   <li class="card-link">
                     <a
-                      href="https://inventory-production-64ad.up.railway.app/"
+                      href="https://inventory-production-5115.up.railway.app/"
                       target="_blank"
                     >
                       <img
@@ -397,18 +402,17 @@
           </p>
         </div>
         <div class="contact-photo">
-          <h1>Contact me</h1>
-          <img
-            src="./images/personal-photo 290w.jpg"
+          <!-- <img
+            src="./images/personal-3-165w.png"
             srcset="
-              ./images/personal-photo-290w.jpg 290w,
-              ./images/personal-photo-480w.jpg 480w
+              ./images/personal-3-165w.png 290w,
+              ./images/personal-3-165w.png 480w
             "
             sizes="(max-width: 480px)
           290px, 480px"
             alt="personal photo"
             aria-label="navbar toggler"
-          />
+          /> -->
         </div>
       </main>
     </section>
