--- a/index.html
+++ b/index.html
@@ -86,6 +86,175 @@
           <div class="card hidden">
             <div class="card-img">
               <img
+                src="./images/perfumes.png"
+                width="300px"
+                alt="screenshot of project"
+              />
+            </div>
+            <div class="card-header">
+              <h2 class="card-title">Perfumes store</h2>
+              <div class="card-links">
+                <ul class="card-links">
+                  <li class="card-link">
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/online-store"
+                      target="_blank"
+                      ><i class="devicon-github-original colored"></i
+                    ></a>
+                  </li>
+                  <li class="card-link">
+                    <a href="https://mr-perumes.vercel.app/" target="_blank">
+                      <img
+                        src="./images/open-in-new.png"
+                        alt=""
+                        width="24px"
+                        height="28px"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                A fully responsive online perfumes store, built with next js,
+                providing customers a great UI/UX and send a transactional
+                emails after submitting order with a roles management system.
+              </p>
+            </div>
+          </div>
+          <div class="card hidden">
+            <div class="card-img">
+              <img
+                src="./images/aigo.png"
+                width="300px"
+                alt="screenshot of project"
+              />
+            </div>
+            <div class="card-header">
+              <h2 class="card-title">Aigo project</h2>
+              <div class="card-links">
+                <ul class="card-links">
+                  <li class="card-link">
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/aigo"
+                      target="_blank"
+                      ><i class="devicon-github-original colored"></i
+                    ></a>
+                  </li>
+                  <li class="card-link">
+                    <a href="https://aigo-iota.vercel.app/" target="_blank">
+                      <img
+                        src="./images/open-in-new.png"
+                        alt=""
+                        width="24px"
+                        height="28px"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                This is an informational website for Aigo project that uses AI
+                to provide an extraordinary experience for tourists around the
+                world.
+              </p>
+            </div>
+          </div>
+          <div class="card hidden">
+            <div class="card-img">
+              <img
+                src="./images/clinic.png"
+                width="300px"
+                alt="screenshot of project"
+              />
+            </div>
+            <div class="card-header">
+              <h2 class="card-title">Aesthetic Clinic</h2>
+              <div class="card-links">
+                <ul class="card-links">
+                  <li class="card-link">
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/clinic"
+                      target="_blank"
+                      ><i class="devicon-github-original colored"></i
+                    ></a>
+                  </li>
+                  <li class="card-link">
+                    <a href="https://clinic-ivory.vercel.app/" target="_blank">
+                      <img
+                        src="./images/open-in-new.png"
+                        alt=""
+                        width="24px"
+                        height="28px"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                This is an Aesthetic clinic system that provides multiple
+                clinics to use it so clients can book their sessions, browse
+                multiple treatments and choose the clinic they like most, the
+                website has a role management system for administrates to manage
+                reservations, using next js.
+              </p>
+            </div>
+          </div>
+          <div class="card hidden">
+            <div class="card-img">
+              <img
+                src="./images/inventory-project.png"
+                width="300px"
+                alt="screenshot of project"
+              />
+            </div>
+            <div class="card-header">
+              <h2 class="card-title">Products Inventory</h2>
+              <div class="card-links">
+                <ul class="card-links">
+                  <li class="card-link">
+                    <a
+                      class="link"
+                      href="https://github.com/kingmohbil/inventory"
+                      target="_blank"
+                      ><i class="devicon-github-original colored"></i
+                    ></a>
+                  </li>
+                  <li class="card-link">
+                    <a
+                      href="https://inventory-production-5115.up.railway.app/"
+                      target="_blank"
+                    >
+                      <img
+                        src="./images/open-in-new.png"
+                        alt=""
+                        width="24px"
+                        height="28px"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                This is a Product inventory store created using express and
+                mongodb, that enables you to manage the store by adding new
+                products anytime you want, using Node js.
+              </p>
+            </div>
+          </div>
+          <div class="card hidden">
+            <div class="card-img">
+              <img
                 src="./images/Priavte club.png  "
                 width="300px"
                 alt="screenshot of project"
@@ -129,91 +298,6 @@
           <div class="card hidden">
             <div class="card-img">
               <img
-                src="./images/memory card.png"
-                width="300px"
-                alt="screenshot of project"
-              />
-            </div>
-            <div class="card-header">
-              <h2 class="card-title">Memory card game</h2>
-              <div class="card-links">
-                <ul class="card-links">
-                  <li class="card-link">
-                    <a
-                      class="link"
-                      href="https://github.com/kingmohbil/memory-card"
-                      target="_blank"
-                      ><i class="devicon-github-original colored"></i
-                    ></a>
-                  </li>
-                  <li class="card-link">
-                    <a
-                      href="https://kingmohbil.github.io/memory-card/"
-                      target="_blank"
-                    >
-                      <img
-                        src="./images/open-in-new.png"
-                        alt=""
-                        width="24px"
-                        height="28px"
-                      />
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-description">
-              <p class="card-text">
-                A memory card game using react js library.
-              </p>
-            </div>
-          </div>
-          <div class="card hidden">
-            <div class="card-img">
-              <img
-                src="./images/inventory-project.png"
-                width="300px"
-                alt="screenshot of project"
-              />
-            </div>
-            <div class="card-header">
-              <h2 class="card-title">Products Inventory</h2>
-              <div class="card-links">
-                <ul class="card-links">
-                  <li class="card-link">
-                    <a
-                      class="link"
-                      href="https://github.com/kingmohbil/inventory"
-                      target="_blank"
-                      ><i class="devicon-github-original colored"></i
-                    ></a>
-                  </li>
-                  <li class="card-link">
-                    <a
-                      href="https://inventory-production-5115.up.railway.app/"
-                      target="_blank"
-                    >
-                      <img
-                        src="./images/open-in-new.png"
-                        alt=""
-                        width="24px"
-                        height="28px"
-                      />
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-description">
-              <p class="card-text">
-                This is a Product inventory store created using express and
-                mongodb.
-              </p>
-            </div>
-          </div>
-          <div class="card hidden">
-            <div class="card-img">
-              <img
                 src="./images/weather app.png"
                 width="300px"
                 alt="screenshot of project"
@@ -251,90 +335,6 @@
               <p class="card-text">
                 A weather application that provides weather information in a
                 variety of locations.
-              </p>
-            </div>
-          </div>
-          <div class="card hidden">
-            <div class="card-img">
-              <img
-                src="./images/Library.png"
-                width="300px"
-                alt="screenshot of project"
-              />
-            </div>
-            <div class="card-header">
-              <h2 class="card-title">Library</h2>
-              <div class="card-links">
-                <ul class="card-links">
-                  <li class="card-link">
-                    <a
-                      class="link"
-                      href="https://github.com/kingmohbil/Library"
-                      target="_blank"
-                      ><i class="devicon-github-original colored"></i
-                    ></a>
-                  </li>
-                  <li class="card-link">
-                    <a
-                      href="https://kingmohbil.github.io/Library/"
-                      target="_blank"
-                    >
-                      <img
-                        src="./images/open-in-new.png"
-                        alt=""
-                        width="24px"
-                        height="28px"
-                      />
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-description">
-              <p class="card-text">
-                A local library that you can add books to it.
-              </p>
-            </div>
-          </div>
-          <div class="card hidden">
-            <div class="card-img">
-              <img
-                src="./images/cv-project.png"
-                width="300px"
-                alt="screenshot of project"
-              />
-            </div>
-            <div class="card-header">
-              <h2 class="card-title">CV generator</h2>
-              <div class="card-links">
-                <ul class="card-links">
-                  <li class="card-link">
-                    <a
-                      class="link"
-                      href="https://github.com/kingmohbil/react-cv-project"
-                      target="_blank"
-                      ><i class="devicon-github-original colored"></i
-                    ></a>
-                  </li>
-                  <li class="card-link">
-                    <a
-                      href="https://kingmohbil.github.io/react-cv-project/"
-                      target="_blank"
-                    >
-                      <img
-                        src="./images/open-in-new.png"
-                        alt=""
-                        width="24px"
-                        height="28px"
-                      />
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-description">
-              <p class="card-text">
-                This is a CV generator created using react js library.
               </p>
             </div>
           </div>
