Update index.html changed email address

--- a/index.html
+++ b/index.html
@@ -368,14 +368,14 @@
               </a>
             </div>
             <div>
-              <a href="mailto:kingwazzan2@example.com" class="email-link"
+              <a href="mailto:alwazzanmohammad2@gmail.com" class="email-link"
                 ><img
                   src="./images/email.png"
                   alt=""
                   width="32px"
                   class="icon"
                 />
-                <p class="icon-paragraph">kingwazzan2@gmail.com</p></a
+                <p class="icon-paragraph">alwazzanmohammad2@gmail.com</p></a
               >
             </div>
           </div>
